<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size80dp"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="@dimen/radius5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userCallImageID"
        android:layout_width="@dimen/size65dp"
        android:layout_height="@dimen/size65dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/size10dp"
        android:src="@drawable/smile"/>

    <TextView
        android:id="@+id/userCallNameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size120dp"
        android:layout_marginTop="@dimen/size5dp"
        android:text="@string/userName"
        android:textColor="@color/black_color"
        android:textSize="@dimen/textSize15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/userCallNumberID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size120dp"
        android:layout_marginTop="@dimen/size30dp"
        android:text="@string/myPhoneNumber"
        android:textColor="@color/black_color"
        android:textSize="@dimen/textSize20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size90dp"
        android:layout_marginTop="@dimen/size35dp"
        android:text="@string/tel"
        android:textColor="@color/black_color"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/userCallButtonID"
        android:layout_width="@dimen/size60dp"
        android:layout_height="@dimen/size60dp"
        android:layout_gravity="end|center_vertical"
        android:layout_margin="@dimen/size10dp"
        android:background="@drawable/ic_phone_forwarded"/>

</android.support.v7.widget.CardView>